unpackaged/main/default/objects/API_Settings__mdt/API_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Has the endpoint and authentication details for integrations</description>
    <label>API Settings</label>
    <pluralLabel>API Settings</pluralLabel>
</CustomObject>