unpackaged/main/default/objects/API_Settings__mdt/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Netsuite Account.Company identifier</description>
    <label>Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>