unpackaged/main/default/objects/API_Settings__mdt/fields/Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Key__c</fullName>
    <description>Consumer Key</description>
    <label>Consumer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>