unpackaged/main/default/objects/API_Settings__mdt/fields/Consumer_Secret__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Secret__c</fullName>
    <description>Consumer Secret</description>
    <label>Consumer Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>