unpackaged/main/default/objects/API_Settings__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint url</description>
    <label>Endpoint</label>
    <type>TextArea</type>
</CustomField>