unpackaged/main/default/objects/API_Settings__mdt/fields/Signature_Method__c.field-meta.xml
<CustomField>
    <fullName>Signature_Method__c</fullName>
    <description>Algorithm to construct signature</description>
    <label>Signature Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>