unpackaged/main/default/objects/API_Settings__mdt/fields/Token_Id__c.field-meta.xml
<CustomField>
    <fullName>Token_Id__c</fullName>
    <description>Token Id</description>
    <label>Token Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>