unpackaged/main/default/objects/API_Settings__mdt/fields/Token_Secret__c.field-meta.xml
<CustomField>
    <fullName>Token_Secret__c</fullName>
    <description>Token Secret</description>
    <label>Token Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>