unpackaged/main/default/objects/API_Settings__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>API Version</description>
    <label>Version</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>